--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <h1>회원가입 페이지입니다.</h1>
     <hr />
-    <a class="home" href="./login.html">🏠홈으로</a>
+    <a class="home" href="./pages/login.html">🏠홈으로</a>
   </body>
 </html>
