--- a/pages/login.html
+++ b/pages/login.html
@@ -15,7 +15,7 @@
       <input class="loginPw" placeholder="비밀번호를 입력해주세요." />
       <button class="loginBtn">로그인</button>
       <div class="link">
-        <a class="joinLink" href="./join.html">회원가입</a>
+        <a class="joinLink" href="../index.html">회원가입</a>
         <div class="line">|</div>
         <a class="accountLink" href="./pwfind.html">계정 찾기</a>
       </div>
