--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>회원가입 페이지입니다.</h1>
+    <h1>회원가입</h1>
     <hr />
     <a class="home" href="./pages/login.html">🏠홈으로</a>
   </body>
