--- a/pages/pwfind.html
+++ b/pages/pwfind.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>회원가입 페이지입니다.</h1>
+    <h1>비밀번호 찾기</h1>
     <hr />
     <a class="home" href="../index.html">🏠홈으로</a>
   </body>
