--- a/pages/join.html
+++ b/pages/join.html
@@ -8,8 +8,41 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>회원가입</h1>
+    <header>
+      <a class="logo" href="./pages/index.html">Lego</a>
+      <h1>회원가입</h1>
+    </header>
     <hr />
-    <a class="home" href="./pages/login.html">🏠홈으로</a>
+    <article>
+      <div class="join">
+        <div>이름</div>
+        <input placeholder="이름을 적어주세요."></input>
+      </div>
+      <div class="join">
+        <div>전화번호</div>
+        <input placeholder="전화번호를 적어주세요."></input>
+      </div>
+      <div class="join">
+        <div>이메일</div>
+        <input placeholder="이메일을 적어주세요."></input>
+      </div>
+      <div class="join">
+        <div>아이디</div>
+        <input placeholder="아이디를 적어주세요."></input>
+      </div>
+      <div class="join">
+        <div>비밀번호</div>
+        <input placeholder="비밀번호를 적어주세요."></input>
+      </div>
+      <div class="join">
+        <div>비밀번호 확인</div>
+        <input placeholder="비밀번호를 다시 적어주세요."></input>
+      </div>
+      <button class="button">회원가입</button>
+    </article>
+    <hr />
+    <footer>
+      
+    </footer>
   </body>
 </html>
